--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.1.2"
   },
   "devDependencies": {
